# manuscript_certification

./: README.md  biblioteca_cache.json  book.txt  cli.py  indexer.py  json_parser.py  main.py  manuscript_reader.py  pdf_downloader.py  pyproject.toml  relatorio_direto_ollama.csv  relatorio_final_hibrido.csv  relatorio_final_ollama.csv  relatorio_final_v2.csv  retry_with_pdfs.py  test_full_paper.py  teste_chave.py  verifier.py  verifier_ollama.py  verifier_ollama_direct.py
Extrator_referencias_json/: gerar_dicionarios_ref.py  gerar_pdfs.py  template.html
codigos/: gerar_listas.py  gerar_pdfs.py
dickens/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
lightrag_citation_index/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json
lightrag_citation_index_local/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
(+5 files in other folders)
