[project]
name = "manuscript-certification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "docling>=2.48.0",
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "lightrag-hku>=1.4.7",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.2",
]
