[project]
name = "manuscript-certification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "datasets>=4.0.0",
    "docling>=2.48.0",
    "duckdb>=1.3.2",
    "fastapi>=0.118.0",
    "jupyter>=1.1.1",
    "jwt>=1.4.0",
    "lightrag-hku[api]>=1.4.9.1",
    "ollama>=0.6.0",
    "pandas>=2.3.2",
    "pydantic-ai>=1.0.2",
    "pypdf2>=3.0.1",
]
